--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,6 +294,13 @@ footer {
     hr {
         display: none;
     }
+
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
 }
 
 /* For medium screen sizes 950px and down */
